package entities;

public class Section {
    private int id;
    private String sectionName;
    private String sectionContent;

    // Constructors, getters, and setters...
}

