@startuml
'https://plantuml.com/class-diagram

class Podcast
class Episode
class Transcript
class TextChunk
class User

Podcast --o Episode
Episode --* Transcript
Transcript --* TextChunk
User --o Podcast
Episode --o Section
Episode --|> MediaItem
Podcast --|> MediaCollection
MediaCollection --o MediaItem

Abstract MediaCollection {
 - String name
 - String description
 - String author
 - List<MediaItem> mediaItems
}


class Podcast {
 - String name
 - Image logo
 - String description
 - List<String> genres
 - String author
 - List<Episode> mediaItems
}

class Section {
    - String title
    - int startIndex
    - int endIndex
}

Abstract MediaItem {
 - String title
 - File audio
}

class Episode {
 - String title
 - Image coverImage
 - int length
 - File audio
 - Transcript transcript
 - List<Section> sections
 - String summary
 - int id
}


class Transcript {
 - String rawText
 - List<TextChunk> textChunks
}

class TextChunk {
 - int start
 - int end
 - String text
}

class User {
 - String username
 - String password
 - List<Podcast> podcasts
}

@enduml